[package]
name = "xcap"
version = "0.7.1"
edition = "2024"
description = "XCap is a cross-platform screen capture library written in Rust. It supports Linux (X11, Wayland), MacOS, and Windows. XCap supports screenshot and video recording (WIP)."
license = "Apache-2.0"
documentation = "https://docs.rs/xcap"
homepage = "https://github.com/nashaofu/xcap"
repository = "https://github.com/nashaofu/xcap.git"
keywords = ["screen", "monitor", "window", "capture", "image"]

[workspace]
members = ["."]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
image = ["image/default"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4"
scopeguard = "1.2"
thiserror = "2.0"

[target.'cfg(target_os = "macos")'.dependencies]
dispatch2 = "0.3"
objc2 = "0.6.1"
objc2-app-kit = "0.3.1"
objc2-core-foundation = "0.3.1"
objc2-core-graphics = "0.3.1"
objc2-foundation = "0.3.1"
objc2-av-foundation = "0.3.1"
objc2-core-media = "0.3.1"
objc2-core-video = "0.3.1"

[target.'cfg(target_os = "windows")'.dependencies]
widestring = "1.2"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_Devices_Display",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_Xps",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
] }

[target.'cfg(target_os="linux")'.dependencies]
url = "2.5"
zbus = "5.6"
rand = "0.9"
serde = "1.0"
pipewire = "0.8"
lazy_static = "1.5"
libwayshot-xcap = "0.3"
percent-encoding = "2.3"
xcb = { version = "1.5", features = ["randr"] }

[dev-dependencies]
fs_extra = "1.3"

[target.'cfg(target_os="windows")'.dev-dependencies]
windows = { version = "0.61", features = ["Win32_UI_HiDpi"] }
